Install SCSS, add pokedex, pokemon and pokemons components

--- a/client/src/Apps.scss
+++ b/client/src/Apps.scss
@@ -1,3 +1,9 @@
+@import "./containers/Pokedex/Pokedex";
+@import "./components/Pokemons/Pokemons";
+@import "./components/Pokemon/Pokemon";
+
+
+
 .App {
   text-align: center;
 }
