--- a/client/src/components/PokedexSides/RightPokedex/RightPokedex.scss
+++ b/client/src/components/PokedexSides/RightPokedex/RightPokedex.scss
@@ -1,288 +1,176 @@
 .right
 	{
-		width: 350px;
-		height: 500px;
+		width: 472.5px;
+		height: 675px;
 		float: left;
 		position: relative;
 	}
 
 .curve1_right
-{
-    width: 166px;
-    height: 451px;
-    background-color: #c00d0d;
-    float: right;
+    {
+        width: 224.1px;
+        height: 608.85px;
+        background-color: #c00d0d;
+        float: right;
 
-    position: absolute;
-    bottom: 0;
-    left: 0;
+        position: absolute;
+        bottom: 0;
+        left: 0;
 
-    border-top-right-radius:85px 60px;
-    -webkit-border-right-left-radius: 85px 60px;
-    -moz-border-right-left-radius: 85px 60px;
-    -o-border-right-left-radius: 85px 60px;
-}
+        border-top-right-radius:114.75px 81px;
+    }
 
 
 .bg_curve1_right
-{
-    width: 350px;
-    height: 80px;
-    background-color: #fff;
+    {
+        width: 472.5px;
+        height: 108px;
+        background-color: #fff;
 
-    border-top-right-radius: 30px;
-    -webkit-border-top-right-radius: 30px;
-    -moz-border-top-right-radius: 30px;
-    -o-border-top-right-radius: 30px;
-}
+        border-top-right-radius: 40.5px;
+    }
 
 .curve2_right
-{
-    width: 216px;
-    height: 100px;
-    background-color: #fff;
-    float: left;
+    {
+        width: 291.6px;
+        height: 108px;
+        background-color: #fff;
+        float: left;
 
-    position: absolute;
-    top: 0;
-    right: 0;
+        position: absolute;
+        top: 0;
+        right: 0;
 
-    border-bottom-left-radius: 85px 60px;
-    -webkit-border-bottom-left-radius: 85px 60px;
-    -moz-border-bottom-left-radius: 85px 60px;
-    -o-border-bottom-left-radius: 85px 60px;
-}
+        border-bottom-left-radius: 114.75px 101.25px;
+    }
 
 .bg_curve2_right
-{
-    width: 350px;
-    height: 420px;
-    background-color: #c00d0d;
-
-    border-bottom-right-radius: 30px;
-    -webkit-border-bottom-right-radius: 30px;
-    -moz-border-bottom-right-radius: 30px;
-    -o-border-bottom-right-radius: 30px;
-
-    box-shadow: -10px 9px #5e0000;
-    -webkit-box-shadow: -10px 9px #5e0000;
-    -moz-box-shadow: -10px 9px #5e0000;
-    -o-box-shadow: -10px 9px #5e0000;
-}
+    {
+        width: 472.5px;
+        height: 567px;
+        background-color: #c00d0d;
+        border-bottom-right-radius: 40.5px;
+        box-shadow: -13.5px 12.15px #5e0000;
+    }
 
 .stats
-{
-    height: 130px;
-    width: 280px;
-    padding: 10px;
-    background-color: #30da0c;
-    z-index: 1;
-    font-size: 13px;
-    font-family: arial, sans-serif;
+    {
+        height: 175.5px;
+        width: 375px;
+        padding: 13.5px;
+        background-color: #30da0c;
+        z-index: 1;
+        font-size: 14.04px;
+        font-family: arial, sans-serif;
 
-    position: absolute;
-    top: 130px;
-    left: 25px;
+        position: absolute;
+        top: 175.5px;
+        left: 33.75px;
 
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -o-border-radius: 15px;
-
-    box-shadow: 0 0 20px #003300 inset;
-    -webkit-box-shadow: 0 0 20px #003300 inset;
-    -moz-box-shadow: 0 0 20px #003300 inset;
-    -o-box-shadow: 0 0 20px #003300 inset;
-}
+        border-radius: 20.25px;
+        box-shadow: 0 0 27px #003300 inset;
+    }
 
 .blueButtons1
-{
-    z-index: 1;
+    {
+        z-index: 1;
 
-    position: absolute;
-    top: 295px;
-    left: 49px;
-}
+        position: absolute;
+        top: 398.25px;
+        left: 66.15px;
+    }
 
 .blueButtons2
-{
-    z-index: 1;
+    {
+        z-index: 1;
 
-    position: absolute;
-    top: 335px;
-    left: 49px;
-}
+        position: absolute;
+        top: 452.25px;
+        left: 66.15px;
+    }
 
 .blueButton
-{
-    height: 35px;
-    width : 45px;
-    background-color: #003300;
-    float: left;
-    margin-right: 7px;
+    {
+        height: 47.25px;
+        width : 60.75px;
+        background-color: #003300;
+        float: left;
+        margin-right: 9.45px;
 
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -o-border-radius: 10px;
+        border-radius: 13.5px;
+        background: linear-gradient(to top, #307bfb 0%, #0530e5 80%);	
+        box-shadow: -1.35px 2.7px #001c91;
+    }
 
-    background: linear-gradient(top, #307bfb 0%, #0530e5 80%);	
-    background: -webkit-linear-gradient(top, #307bfb 0%, #0530e5 80%);
-    background: -moz-linear-gradient(top, #307bfb 0%, #0530e5 80%);
-    background: -o-linear-gradient(top, #307bfb 0%, #0530e5 80%);
+.barbuttonRight
+    {
 
-    box-shadow: -1px 2px #001c91;
-    -webkit-box-shadow: -1px 2px #001c91;
-    -moz-box-shadow: -1px 2px #001c91;
-    -o-box-shadow: -1px 2px #001c91;
-}
+        height: 17.55px;
+        width: 67.5px;
+        z-index: 1;
+
+        position: absolute;
+        top: 519.75px;
+
+        border-radius: 135px;
+    }
 
 .barbutton3
-{
-    height: 13px;
-    width: 50px;
-    z-index: 1;
-
-    position: absolute;
-    top: 385px;
-    left: 210px;
-
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -o-border-radius: 100px;
-
-    background: linear-gradient(top, #50fb05 0%, #057b05 100%);	
-    background: -webkit-linear-gradient(top, #50fb05 0%, #057b05 100%);
-    background: -moz-linear-gradient(top, #50fb05 0%, #057b05 100%);
-    background: -o-linear-gradient(top, #50fb05 0%, #057b05 100%);
-
-    box-shadow: -1px 2px #004200;
-    -webkit-box-shadow: -1px 2px #004200;
-    -moz-box-shadow: -1px 2px #004200;
-    -o-box-shadow: -1px 2px #004200;
-}
+    {
+        left: 283.5px;
+        background: linear-gradient(to top, #50fb05 0%, #057b05 100%);	
+        box-shadow: -1.35px 2.7px #004200;
+    }
 
 .barbutton4
-{
-    height: 13px;
-    width: 50px;
-    z-index: 1;
+    {
+        left: 364.5px;
+        background: linear-gradient(to top, #fb6505 0%, #bb0505 100%);	
+        box-shadow: -1.35px 2.7px #7b0000;
+    }
 
-    position: absolute;
-    top: 385px;
-    left: 270px;
-
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -o-border-radius: 100px;
-
-    background: linear-gradient(top, #fb6505 0%, #bb0505 100%);	
-    background: -webkit-linear-gradient(top, #fb6505 0%, #bb0505 100%);
-    background: -moz-linear-gradient(top, #fb6505 0%, #bb0505 100%);
-    background: -o-linear-gradient(top, #fb6505 0%, #bb0505 100%);
-
-    box-shadow: -1px 2px #7b0000;
-    -webkit-box-shadow: -1px 2px #7b0000;
-    -moz-box-shadow: -1px 2px #7b0000;
-    -o-box-shadow: -1px 2px #7b0000;
-}
+.miniButtonGlassRight
+    {
+        width: 20.25px;
+        height: 20.25px;
+        float: left;
+        z-index: 1;
+        box-shadow: 0 0 13.5px #490000;
+        border-radius: 27px;
+        position: absolute;
+        top: 517.05px;
+    }
 
 .miniButtonGlass4
-{
-    width: 15px;
-    height: 15px;
-    float: left;
-    z-index: 1;
-
-    position: absolute;
-    top: 383px;
-    left: 25px;
-
-    box-shadow: 0 0 10px #490000;
-    -webkit-box-shadow: 0 0 10px #490000;
-    -moz-box-shadow: 0 0 10px #490000;
-    -o-box-shadow: 0 0 10px #490000;
-
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -o-border-radius: 20px;
-    
-    background: radial-gradient(#ff9b5b, #fb6505);
-    background: -webkit-radial-gradient(#ff9b5b, #fb6505);
-    background: -moz-radial-gradient(#ff9b5b, #fb6505);
-    background: -o-radial-gradient(#ff9b5b, #fb6505);
-}
+    {
+        left: 33.75px;
+        background: radial-gradient(#ff9b5b, #fb6505);
+    }
 
 .miniButtonGlass5
-{
-    width: 15px;
-    height: 15px;
-    float: left;
-    z-index: 1;
+    {
+        left: 68.85px;
+        background: radial-gradient(#0abd0a, #057b05);
+    }
 
-    position: absolute;
-    top: 383px;
-    left: 51px;
-
-    box-shadow: 0 0 10px #490000;
-    -webkit-box-shadow: 0 0 10px #490000;
-    -moz-box-shadow: 0 0 10px #490000;
-    -o-box-shadow: 0 0 10px #490000;
-
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -o-border-radius: 20px;
-    
-    background: radial-gradient(#0abd0a, #057b05);
-    background: -webkit-radial-gradient(#0abd0a, #057b05);
-    background: -moz-radial-gradient(#0abd0a, #057b05);
-    background: -o-radial-gradient(#0abd0a, #057b05);
-}
+.yellowBox 
+    {
+        width: 189px;
+        height: 94.5px;
+        z-index: 1;
+        background-color: #ffff00;
+        position: absolute;
+        top: 560.25px;
+        border-radius: 20.25px;
+        box-shadow: 0 0 27px #ff6600 inset;
+    }
 
 .yellowBox1
-{
-    width: 140px;
-    height: 70px;
-    z-index: 1;
-    background-color: #ffff00;
-
-    position: absolute;
-    top: 415px;
-    left: 25px;
-
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -o-border-radius: 15px;
-
-    box-shadow: 0 0 20px #ff6600 inset;
-    -webkit-box-shadow: 0 0 20px #ff6600 inset;
-    -moz-box-shadow: 0 0 20px #ff6600 inset;
-    -o-box-shadow: 0 0 20px #ff6600 inset;
-}
+    {
+        left: 33.75px;
+    }
 
 .yellowBox2
-{
-    width: 140px;
-    height: 70px;
-    z-index: 1;
-    background-color: #ffff00;
-
-    position: absolute;
-    top: 415px;
-    left: 185px;
-
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -o-border-radius: 15px;
-
-    box-shadow: 0 0 20px #ff6600 inset;
-    -webkit-box-shadow: 0 0 20px #ff6600 inset;
-    -moz-box-shadow: 0 0 20px #ff6600 inset;
-    -o-box-shadow: 0 0 20px #ff6600 inset;
-}
+    {
+        left: 248.4px;
+    }
