Finish details view, add change page logic, fix various css problems, add new font and adjust font-size

--- a/client/src/components/PokedexSides/LeftPokedex/LeftPokedex.scss
+++ b/client/src/components/PokedexSides/LeftPokedex/LeftPokedex.scss
@@ -304,12 +304,12 @@
 .rightcross
 	{
 		top: 40.5px;
-		right: 0;
+		right: 4px;
 	}
 
 .botcross
 	{
-		bottom: 0;
+		bottom: 4px;
 		left: 40.5px;
 	}
 
