--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family:"Pokemon Pixel Font Regular";
+  src:
+    url("./fonts/pokemon_pixel_font.eot") format("eot"),
+    url("./fonts/pokemon_pixel_font.woff") format("woff"),
+    url("./fonts/pokemon_pixel_font.ttf") format("truetype"),
+    url("./fonts/pokemon_pixel_font.svg#Pokemon-Pixel-Font") format("svg");
+  font-weight:normal;
+  font-style:normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: "Pokemon Pixel Font Regular";
 }
