--- a/client/src/components/PokedexSides/LeftPokedex/LeftPokedex.scss
+++ b/client/src/components/PokedexSides/LeftPokedex/LeftPokedex.scss
@@ -170,6 +170,29 @@
 		margin: 0 auto;
 	}
 
+.arrow 
+	{
+		border: solid grey;
+		border-width: 0 4px 4px 0;
+		display: inline-block;
+		padding: 3px;
+		position: absolute;
+		top: 45%;
+		opacity: 0.6;
+	}
+
+.leftArrow 
+	{
+		left: 10%;
+		transform: rotate(135deg);
+	}
+
+.rightArrow
+	{
+		right: 10%;
+		transform: rotate(-45deg);
+	}
+
 .topPicture
 	{
 		margin: 8.1px auto;
