--- a/client/src/components/PokedexSides/LeftPokedex/LeftPokedex.scss
+++ b/client/src/components/PokedexSides/LeftPokedex/LeftPokedex.scss
@@ -170,6 +170,23 @@
 		margin: 0 auto;
 	}
 
+.searchContainer
+	{
+		margin-top: 2px;
+		display: flex;
+		justify-content: center;
+		font-size: 12px;
+	}
+
+.searchIcon
+	{
+		color: #494949;
+		opacity: 0.4;
+		position: absolute;
+		left: 65%;
+		top: 11.5%;
+	}
+
 .arrow 
 	{
 		border: solid grey;
