--- a/client/src/components/Pokemons/Pokemons.scss
+++ b/client/src/components/Pokemons/Pokemons.scss
@@ -8,7 +8,7 @@
 }
 
 .pokemonCard {
-    margin: 10px 10px;
+    margin: 0 10px;
     max-height: 85px;
     border: none;
 
@@ -21,7 +21,6 @@
         text-transform: capitalize;
         font-size: 16px;
     }
-
 }
 
 .loading 
