Update search bar, change styling for types and remove axios

--- a/client/src/components/Pokemon/Pokemon.scss
+++ b/client/src/components/Pokemon/Pokemon.scss
@@ -47,7 +47,7 @@
 
 .pokemonTypeDetail 
     {
-        text-transform: capitalize;
+        text-transform: uppercase;
     }
 
 .pokemonEvolutionsStatsDetail
